Added ledger view for users.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,6 @@ _mail:
 
 _rest:
   resource: "@ClubRestBundle/Resources/config/routing.yml"
+
+_account:
+  resource: "@ClubAccountBundle/Resources/config/routing.yml"
