--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -3,4 +3,4 @@ services:
     class: Club\UserBundle\Listener\RequestListener
     arguments: [@doctrine.orm.entity_manager,@session]
     tags:
-      - { name: kernel.listener, event: onCoreRequest }
+      - { name: kernel.listener, event: core.request, method: onCoreRequest }
