Forgot from last commit.

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -8,8 +8,8 @@
     database_user     = root
     database_password =
 
-    mailer_transport  = smtp
-    mailer_host       = localhost
+    mailer_transport  = sendmail
+    mailer_host       =
     mailer_user       =
     mailer_password   =
 
