--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,6 +29,7 @@ security:
 
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /forgot, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, roles: 'ROLE_USER' }
         - { path: /admin/.*, roles: 'ROLE_ADMIN' }
