--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -3,14 +3,14 @@ services:
     class: Club\ShopBundle\Listener\NewOrderListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: onShopOrder }
+      - { name: kernel.listener, event: shop.order, method: onShopOrder }
   club.shopbundle.listener.on_order_change_listener:
     class: Club\ShopBundle\Listener\OrderChangeListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: onOrderChange }
+      - { name: kernel.listener, event: order.change, method: onOrderChange }
   club.shopbundle.listener.new_subscription_listener:
     class: Club\ShopBundle\Listener\NewSubscriptionListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: onOrderChange }
+      - { name: kernel.listener, event: order.change, method: onOrderChange }
