--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,6 +19,8 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+      resources:      ['::fields.html.twig']
 
 # Assetic Configuration
 assetic:
