Only shop categories in right location.

--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -1,6 +1,6 @@
 services:
   club.userbundle.listener.request:
     class: Club\UserBundle\Listener\RequestListener
-    arguments: [@doctrine.orm.entity_manager,@session]
+    arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.listener, event: core.request, method: onCoreRequest }
