--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,6 @@ _rest:
 
 _account:
   resource: "@ClubAccountBundle/Resources/config/routing.yml"
+
+_task:
+  resource: "@ClubTaskBundle/Resources/config/routing.yml"
