--- a/src/Club/TaskBundle/Resources/config/listener.yml
+++ b/src/Club/TaskBundle/Resources/config/listener.yml
@@ -1,6 +1,6 @@
 services:
   club.taskbundle.listener.task:
     class: Club\TaskBundle\Listener\TaskListener
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.entity_manager, @event_dispatcher]
     tags:
       - { name: kernel.listener, event: core.request, method: onCoreRequest }
