--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -4,3 +4,8 @@ services:
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.listener, event: core.request, method: onCoreRequest }
+  club.userbundle.listener.group.recalc:
+    class: Club\UserBundle\Listener\GroupRecalcListener
+    arguments: [@doctrine.orm.entity_manager,@security.context]
+    tags:
+      - { name: kernel.listener, event: group.task, method: onGroupTask }
