--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,3 +16,6 @@ _account:
 
 _task:
   resource: "@ClubTaskBundle/Resources/config/routing.yml"
+
+_log:
+  resource: "@ClubLogBundle/Resources/config/routing.yml"
