--- a/src/Club/LogBundle/Resources/config/routing.yml
+++ b/src/Club/LogBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: ClubLogBundle:Default:index }
+_task:
+  resource: "@ClubLogBundle/Controller/LogController.php"
+  type: annotation
+  prefix: /admin
