--- a/src/Club/EventBundle/Resources/config/routing.yml
+++ b/src/Club/EventBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: ClubEventBundle:Default:index }
+_admin_event:
+  resource: "@ClubEventBundle/Controller/AdminEventController.php"
+  type: annotation
+  prefix: /admin
+
+_event:
+  resource: "@ClubEventBundle/Controller/EventController.php"
+  type: annotation
