Added user filter.

--- a/src/Club/UserBundle/Resources/config/routing.yml
+++ b/src/Club/UserBundle/Resources/config/routing.yml
@@ -65,6 +65,11 @@ _currency:
   type: annotation
   prefix: /admin
 
+_filter:
+  resource: "@ClubUserBundle/Controller/FilterController.php"
+  type: annotation
+  prefix: /admin
+
 _language:
   resource: "@ClubUserBundle/Controller/LanguageController.php"
   type: annotation
