--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,7 +20,8 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
     #form:
-      #resources:      ['::fields.html.twig']
+      #resources:
+        #- '::fields.html.twig'
 
 # Assetic Configuration
 assetic:
