Readded the forms.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,9 +19,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
-    #form:
-      #resources:
-        #- '::fields.html.twig'
+    form:
+      resources:
+        - 'ClubLayoutBundle:Default:fields.html.twig'
 
 # Assetic Configuration
 assetic:
