Improved Ledger module.

--- a/src/Club/AccountBundle/Resources/config/routing.yml
+++ b/src/Club/AccountBundle/Resources/config/routing.yml
@@ -1,3 +1,13 @@
 _ledger:
   resource: "@ClubAccountBundle/Controller/LedgerController.php"
   type: annotation
+
+_admin_ledger:
+  resource: "@ClubAccountBundle/Controller/AdminLedgerController.php"
+  type: annotation
+  prefix: /admin
+
+_admin_account:
+  resource: "@ClubAccountBundle/Controller/AdminAccountController.php"
+  type: annotation
+  prefix: /admin
