--- a/src/Club/AccountBundle/Resources/config/listener.yml
+++ b/src/Club/AccountBundle/Resources/config/listener.yml
@@ -1,6 +1,6 @@
 services:
   club.accountbundle.listener.on_shop_order_listener:
     class: Club\AccountBundle\Listener\NewTransactionListener
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.listener, event: shop.order, method: onShopOrder }
