--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,6 +33,7 @@ security:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /auth/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /installer.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /event/ical, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, roles: 'ROLE_USER' }
         - { path: /admin/.*, roles: 'ROLE_ADMIN' }
