--- a/src/Club/InstallerBundle/Resources/config/routing.yml
+++ b/src/Club/InstallerBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: ClubInstallerBundle:Default:index }
+_installer:
+  resource: "@ClubInstallerBundle/Controller/InstallerController.php"
+  type: annotation
