--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -3,19 +3,19 @@ services:
     class: Club\ShopBundle\Listener\NewOrderListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: shop.order, method: onShopOrder }
+      - { name: kernel.event_listener, event: shop.order, method: onShopOrder }
   club.shopbundle.listener.new_subscription_listener:
     class: Club\ShopBundle\Listener\NewSubscriptionListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: order.change, method: onOrderChange, priority: 10 }
+      - { name: kernel.event_listener, event: order.change, method: onOrderChange, priority: 10 }
   club.shopbundle.listener.on_order_change_listener:
     class: Club\ShopBundle\Listener\OrderChangeListener
     arguments: [@doctrine.orm.entity_manager]
     tags:
-      - { name: kernel.listener, event: order.change, method: onOrderChange, priority: 5 }
+      - { name: kernel.event_listener, event: order.change, method: onOrderChange, priority: 5 }
   club.shopbundle.listener.auto_renewal.listener:
     class: Club\ShopBundle\Listener\AutoRenewalListener
     arguments: [@doctrine.orm.entity_manager,@order,@event_dispatcher]
     tags:
-      - { name: kernel.listener, event: auto_renewal.task, method: onAutoRenewalTask }
+      - { name: kernel.event_listener, event: auto_renewal.task, method: onAutoRenewalTask }
