Added twig truncate filter.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,3 +58,9 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+
+services:
+  twig.extension.text:
+    class: Twig_Extensions_Extension_Text
+    tags:
+      - { name: twig.extension }
