--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,7 +6,8 @@ security:
             iterations: 10
 
     role_hierarchy:
-      ROLE_ADMIN: ROLE_USER
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
         main:
