- Removed LICENSE file - Added some readme text for the clubmaster project - Added versions to the clubmaster project

--- a/src/Club/UserBundle/Resources/config/config.yml
+++ b/src/Club/UserBundle/Resources/config/config.yml
@@ -5,3 +5,5 @@ services:
   success.password.handler:
     class: Club\UserBundle\Helper\SuccessPasswordHandler
     arguments: [@doctrine.orm.entity_manager]
+  clubmaster.version:
+    class: Club\UserBundle\Helper\Version
