Using new mailer helper on reset password.

--- a/src/Club/MailBundle/Resources/config/listener.yml
+++ b/src/Club/MailBundle/Resources/config/listener.yml
@@ -1,7 +1,7 @@
 services:
   club.mailbundle.listener.on_password_reset_listener:
     class: Club\MailBundle\Listener\PasswordResetListener
-    arguments: [@doctrine.orm.entity_manager, @mailer, @templating, @router]
+    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
     tags:
       - { name: kernel.event_listener, event: password.reset, method: onPasswordReset }
   club.mailbundle.listener.on_user_new_listener:
