Added file email strategy.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,6 +55,9 @@ swiftmailer:
     host:      %mailer_host%
     username:  %mailer_user%
     password:  %mailer_password%
+    spool:
+        type: file
+        path: /tmp/swift
 
 jms_security_extra:
     secure_controllers:  true
