--- a/src/Club/MailBundle/Resources/config/listener.yml
+++ b/src/Club/MailBundle/Resources/config/listener.yml
@@ -9,3 +9,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
     tags:
       - { name: kernel.event_listener, event: user.new, method: onUserNew }
+  club.mailbundle.listener.on_mail_task_listener:
+    class: Club\MailBundle\Listener\MailSendListener
+    arguments: [@doctrine.orm.entity_manager, @mailer, @swiftmailer.transport.real]
+    tags:
+      - { name: kernel.event_listener, event: mail.task, method: onMailTask }
