--- a/src/Club/InstallerBundle/Resources/config/routing.yml
+++ b/src/Club/InstallerBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 _installer:
   resource: "@ClubInstallerBundle/Controller/InstallerController.php"
   type: annotation
+
+_upgrade:
+  resource: "@ClubInstallerBundle/Controller/UpgradeController.php"
+  type: annotation
