--- a/src/Club/ShopBundle/Resources/config/routing.yml
+++ b/src/Club/ShopBundle/Resources/config/routing.yml
@@ -47,6 +47,11 @@ _admin_shop_order:
   type: annotation
   prefix: /admin
 
+_admin_shop_order_filter:
+  resource: "@ClubShopBundle/Controller/AdminOrderFilterController.php"
+  type: annotation
+  prefix: /admin
+
 _admin_shop_payment_method:
   resource: "@ClubShopBundle/Controller/AdminPaymentMethodController.php"
   type: annotation
