--- a/src/Club/AccountBundle/Resources/config/listener.yml
+++ b/src/Club/AccountBundle/Resources/config/listener.yml
@@ -4,3 +4,8 @@ services:
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: shop.order, method: onShopOrder }
+  club.accountbundle.listener.left_menu_render_listener:
+    class: Club\AccountBundle\Listener\LeftMenuRenderListener
+    arguments: [@router]
+    tags:
+      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
