--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -19,3 +19,8 @@ services:
     arguments: [@doctrine.orm.entity_manager,@order,@event_dispatcher]
     tags:
       - { name: kernel.event_listener, event: auto_renewal.task, method: onAutoRenewalTask }
+  club.shopbundle.listener.on_coupon_use_listener:
+    class: Club\ShopBundle\Listener\CouponUseListener
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.event_listener, event: coupon.use, method: onCouponUse }
