--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -21,6 +21,6 @@ services:
       - { name: kernel.event_listener, event: auto_renewal.task, method: onAutoRenewalTask }
   club.shopbundle.listener.on_coupon_use_listener:
     class: Club\ShopBundle\Listener\CouponUseListener
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: coupon.use, method: onCouponUse }
