--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,8 +6,8 @@ security:
             iterations: 10
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_EVENT_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN: [ROLE_EVENT_ADMIN]
 
     providers:
         main:
@@ -25,13 +25,14 @@ security:
             anonymous: true
 
     access_control:
-        - { path: /admin.*, roles: ROLE_ADMIN }
-        - { path: /_profiler.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /_wdt.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /admin/event*, roles: ROLE_EVENT_ADMIN }
+        - { path: /admin*, roles: ROLE_ADMIN }
+        - { path: /_profiler*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /_wdt*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /auth.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /installer.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /upgrade.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /auth*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /rest*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /installer*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /upgrade*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /event/ical, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /.*, roles: ROLE_USER }
+        - { path: /*, roles: ROLE_USER }
