--- a/src/Club/AccountBundle/Resources/config/listener.yml
+++ b/src/Club/AccountBundle/Resources/config/listener.yml
@@ -6,6 +6,6 @@ services:
       - { name: kernel.event_listener, event: shop.order, method: onShopOrder }
   club.accountbundle.listener.left_menu_render_listener:
     class: Club\AccountBundle\Listener\LeftMenuRenderListener
-    arguments: [@router]
+    arguments: [@router, @security.context]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
