--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,6 +17,9 @@ _account:
 _task:
   resource: "@ClubTaskBundle/Resources/config/routing.yml"
 
+_mail:
+  resource: "@ClubMailBundle/Resources/config/routing.yml"
+
 _log:
   resource: "@ClubLogBundle/Resources/config/routing.yml"
 
