Made new default database schema.

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -4,7 +4,7 @@
 [parameters]
     database_driver   = pdo_mysql
     database_host     = localhost
-    database_name     = clubmaster_v2
+    database_name     = clubmaster
     database_user     = root
     database_password =
 
