--- a/src/Club/FeedbackBundle/Resources/config/routing.yml
+++ b/src/Club/FeedbackBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-ClubFeedbackBundle_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: ClubFeedbackBundle:Default:index }
+_feedback:
+  resource: "@ClubFeedbackBundle/Controller/FeedbackController.php"
+  type: annotation
