--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+ClubCommunicationBundle:
+    resource: "@ClubCommunicationBundle/Resources/config/routing.yml"
+    prefix:   /
+
 homepage:
   pattern: /
   defaults: { _controller: ClubUserBundle:User:index }
