--- a/src/Club/ShopBundle/Resources/config/config.yml
+++ b/src/Club/ShopBundle/Resources/config/config.yml
@@ -8,3 +8,7 @@ services:
   subscription:
     class: Club\ShopBundle\Helper\Subscription
     arguments: [@doctrine.orm.entity_manager,@session,@translator]
+  twig.extension.text:
+    class: Twig_Extensions_Extension_Text
+    tags:
+      - { name: twig.extension }
