--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -4,6 +4,7 @@
 [parameters]
     database_driver   = pdo_mysql
     database_host     = localhost
+    database_port     =
     database_name     = clubmaster
     database_user     = root
     database_password =
