Added Tests for user bundle.

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -14,7 +14,7 @@
     bootstrap                   = "bootstrap.php.cache" >
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="ClubMaster Test Suite">
             <directory>../src/*/*Bundle/Tests</directory>
             <directory>../src/*/Bundle/*Bundle/Tests</directory>
         </testsuite>
