--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,6 @@
 parameters:
     web_path: %kernel.root_dir%/../web
-    upload_path: %web_path%/uploads
+    upload_path: uploads
 
 imports:
     - { resource: parameters.ini }
