--- a/src/Club/MessageBundle/Resources/config/listener.yml
+++ b/src/Club/MessageBundle/Resources/config/listener.yml
@@ -4,3 +4,8 @@ services:
     arguments: [@router, @security.context, @translator]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+  club.messagebundle.queue_process_listener:
+    class: Club\MessageBundle\Listener\QueueProcessListener
+    arguments: [@doctrine.orm.entity_manager, @clubmaster_mailer]
+    tags:
+      - { name: kernel.event_listener, event: message.task, method: onMessageTask }
