Fixed create user without email and phone.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,6 +19,7 @@ framework:
     session:
         default_locale: %locale%
         auto_start:     true
+        lifetime:       3600
 
 # Twig Configuration
 twig:
