Added default design to dashboard controller.

--- a/src/Club/DashboardBundle/Resources/config/routing.yml
+++ b/src/Club/DashboardBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-ClubDashboardBundle_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: ClubDashboardBundle:Default:index }
+_admin_dashboard:
+  resource: "@ClubDashboardBundle/Controller/AdminDashboardController.php"
+  type: annotation
+  prefix: /admin
