--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,10 +1,6 @@
-ClubDashboardBundle:
-    resource: "@ClubDashboardBundle/Resources/config/routing.yml"
-    prefix:   /
-
 homepage:
   pattern: /
-  defaults: { _controller: ClubUserBundle:User:index }
+  defaults: { _controller: ClubDashboardBundle:AdminDashboard:index }
 
 _shop:
   resource: "@ClubShopBundle/Resources/config/routing.yml"
@@ -38,3 +34,6 @@ _feedback:
 
 _message:
   resource: "@ClubMessageBundle/Resources/config/routing.yml"
+
+_dashboard:
+  resource: "@ClubDashboardBundle/Resources/config/routing.yml"
