--- a/src/Club/LogBundle/Resources/config/routing.yml
+++ b/src/Club/LogBundle/Resources/config/routing.yml
@@ -2,3 +2,8 @@ _log:
   resource: "@ClubLogBundle/Controller/LogController.php"
   type: annotation
   prefix: /admin
+
+_log_php:
+  resource: "@ClubLogBundle/Controller/PhpLogController.php"
+  type: annotation
+  prefix: /admin
