Added more controllers to the API.

--- a/src/Club/APIBundle/Resources/config/routing.yml
+++ b/src/Club/APIBundle/Resources/config/routing.yml
@@ -3,3 +3,8 @@ _api_auth:
   type: annotation
   prefix: /api
 
+_api_event:
+  resource: "@ClubAPIBundle/Controller/EventController.php"
+  type: annotation
+  prefix: /api/event
+
