Changed number to phone_number.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,9 +28,9 @@ security:
         - { path: /admin*, roles: ROLE_ADMIN }
         - { path: /_profiler*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /_wdt*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /api*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /auth*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /rest*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /installer*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /upgrade*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /event/ical, role: IS_AUTHENTICATED_ANONYMOUSLY }
