--- a/src/Club/APIBundle/Resources/config/services.yml
+++ b/src/Club/APIBundle/Resources/config/services.yml
@@ -1,7 +1,3 @@
-parameters:
-#    club_api.example.class: Club\APIBundle\Example
-
 services:
-#    club_api.example:
-#        class: %club_api.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+  club_api.encode:
+    class: Club\APIBundle\Helper\Encode
